my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/ECONSTP/T_ECONSTP-struct.h.tmp
/* Generated by dmlc, do not edit! */

#ifndef T_ECONSTP_STRUCT_H
#define T_ECONSTP_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_ECONSTP(void);


#endif /* not T_ECONSTP_STRUCT_H */
